5 files modified, 2 added, 2 deleted

--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "@babel/core": "7.18.0",
+    "@emotion/react": "11.9.0",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "6.1.1",
+    "@fortawesome/free-solid-svg-icons": "6.1.1",
+    "@fortawesome/react-fontawesome": "0.1.18",
+    "@mdx-js/react": "2.1.1",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "theme-ui": "0.14.5"
   },
   "scripts": {
     "start": "react-scripts start",
